--- a/asistencias/asistencias_obras/templates/layouts/base_rh.html
+++ b/asistencias/asistencias_obras/templates/layouts/base_rh.html
@@ -74,7 +74,7 @@
                 <i class="fas fa-sticky-note mr-3"></i>
                 Empleados
             </a>
-            <a href="#" class="flex items-center text-white opacity-75 hover:opacity-100 py-4 pl-6 nav-item">
+            <a href="{% url 'reporte_asistencia' %}" class="flex items-center text-white opacity-75 hover:opacity-100 py-4 pl-6 nav-item">
                 <i class="fas fa-table mr-3"></i>
                 Asistencia
             </a>
@@ -124,7 +124,7 @@
                     <i class="fas fa-sticky-note mr-3"></i>
                     Empleados
                 </a>
-                <a href="#" class="flex items-center text-white opacity-75 hover:opacity-100 py-2 pl-4 nav-item">
+                <a href="{% url 'reporte_asistencia' %}" class="flex items-center text-white opacity-75 hover:opacity-100 py-2 pl-4 nav-item">
                     <i class="fas fa-table mr-3"></i>
                     Asistencias
                 </a>
