--- a/asistencias/asistencias_obras/templates/layouts/base_admin.html
+++ b/asistencias/asistencias_obras/templates/layouts/base_admin.html
@@ -164,6 +164,8 @@
             <main class="w-full flex-grow p-6">
                 {% block content %}
                 {% endblock %}
+                {% block extra_js %}
+                {% endblock %}
             </main>
     
 
