--- a/asistencias/asistencias_obras/templates/admin/admin_dashboard.html
+++ b/asistencias/asistencias_obras/templates/admin/admin_dashboard.html
@@ -1,175 +1,152 @@
 {% extends "layouts/base_admin.html" %}
 
 {% block content %}
-<h1 class="text-3xl text-black pb-6">Dashboard</h1>
-    
-                <div class="flex flex-wrap mt-6">
-                    <div class="w-full lg:w-1/2 pr-0 lg:pr-2">
-                        <p class="text-xl pb-3 flex items-center">
-                            <i class="fas fa-plus mr-3"></i> Monthly Reports
-                        </p>
-                        <div class="p-6 bg-white">
-                            <canvas id="chartOne" width="400" height="200"></canvas>
-                        </div>
-                    </div>
-                    <div class="w-full lg:w-1/2 pl-0 lg:pl-2 mt-12 lg:mt-0">
-                        <p class="text-xl pb-3 flex items-center">
-                            <i class="fas fa-check mr-3"></i> Resolved Reports
-                        </p>
-                        <div class="p-6 bg-white">
-                            <canvas id="chartTwo" width="400" height="200"></canvas>
-                        </div>
-                    </div>
-                </div>
-    
-                <div class="w-full mt-12">
-                    <p class="text-xl pb-3 flex items-center">
-                        <i class="fas fa-list mr-3"></i> Latest Reports
-                    </p>
-                    <div class="bg-white overflow-auto">
-                        <table class="min-w-full bg-white">
-                            <thead class="bg-gray-800 text-white">
-                                <tr>
-                                    <th class="w-1/3 text-left py-3 px-4 uppercase font-semibold text-sm">Name</th>
-                                    <th class="w-1/3 text-left py-3 px-4 uppercase font-semibold text-sm">Last name</th>
-                                    <th class="text-left py-3 px-4 uppercase font-semibold text-sm">Phone</th>
-                                    <th class="text-left py-3 px-4 uppercase font-semibold text-sm">Email</th>
-                                </tr>
-                            </thead>
-                            <tbody class="text-gray-700">
-                                <tr>
-                                    <td class="w-1/3 text-left py-3 px-4">Lian</td>
-                                    <td class="w-1/3 text-left py-3 px-4">Smith</td>
-                                    <td class="text-left py-3 px-4"><a class="hover:text-blue-500" href="tel:622322662">622322662</a></td>
-                                    <td class="text-left py-3 px-4"><a class="hover:text-blue-500" href="mailto:jonsmith@mail.com">jonsmith@mail.com</a></td>
-                                </tr>
-                                <tr class="bg-gray-200">
-                                    <td class="w-1/3 text-left py-3 px-4">Emma</td>
-                                    <td class="w-1/3 text-left py-3 px-4">Johnson</td>
-                                    <td class="text-left py-3 px-4"><a class="hover:text-blue-500" href="tel:622322662">622322662</a></td>
-                                    <td class="text-left py-3 px-4"><a class="hover:text-blue-500" href="mailto:jonsmith@mail.com">jonsmith@mail.com</a></td>
-                                </tr>
-                                <tr>
-                                    <td class="w-1/3 text-left py-3 px-4">Oliver</td>
-                                    <td class="w-1/3 text-left py-3 px-4">Williams</td>
-                                    <td class="text-left py-3 px-4"><a class="hover:text-blue-500" href="tel:622322662">622322662</a></td>
-                                    <td class="text-left py-3 px-4"><a class="hover:text-blue-500" href="mailto:jonsmith@mail.com">jonsmith@mail.com</a></td>
-                                </tr>
-                                <tr class="bg-gray-200">
-                                    <td class="w-1/3 text-left py-3 px-4">Isabella</td>
-                                    <td class="w-1/3 text-left py-3 px-4">Brown</td>
-                                    <td class="text-left py-3 px-4"><a class="hover:text-blue-500" href="tel:622322662">622322662</a></td>
-                                    <td class="text-left py-3 px-4"><a class="hover:text-blue-500" href="mailto:jonsmith@mail.com">jonsmith@mail.com</a></td>
-                                </tr>
-                                <tr>
-                                    <td class="w-1/3 text-left py-3 px-4">Lian</td>
-                                    <td class="w-1/3 text-left py-3 px-4">Smith</td>
-                                    <td class="text-left py-3 px-4"><a class="hover:text-blue-500" href="tel:622322662">622322662</a></td>
-                                    <td class="text-left py-3 px-4"><a class="hover:text-blue-500" href="mailto:jonsmith@mail.com">jonsmith@mail.com</a></td>
-                                </tr>
-                                <tr class="bg-gray-200">
-                                    <td class="w-1/3 text-left py-3 px-4">Emma</td>
-                                    <td class="w-1/3 text-left py-3 px-4">Johnson</td>
-                                    <td class="text-left py-3 px-4"><a class="hover:text-blue-500" href="tel:622322662">622322662</a></td>
-                                    <td class="text-left py-3 px-4"><a class="hover:text-blue-500" href="mailto:jonsmith@mail.com">jonsmith@mail.com</a></td>
-                                </tr>
-                                <tr>
-                                    <td class="w-1/3 text-left py-3 px-4">Oliver</td>
-                                    <td class="w-1/3 text-left py-3 px-4">Williams</td>
-                                    <td class="text-left py-3 px-4"><a class="hover:text-blue-500" href="tel:622322662">622322662</a></td>
-                                    <td class="text-left py-3 px-4"><a class="hover:text-blue-500" href="mailto:jonsmith@mail.com">jonsmith@mail.com</a></td>
-                                </tr>
-                                <tr class="bg-gray-200">
-                                    <td class="w-1/3 text-left py-3 px-4">Isabella</td>
-                                    <td class="w-1/3 text-left py-3 px-4">Brown</td>
-                                    <td class="text-left py-3 px-4"><a class="hover:text-blue-500" href="tel:622322662">622322662</a></td>
-                                    <td class="text-left py-3 px-4"><a class="hover:text-blue-500" href="mailto:jonsmith@mail.com">jonsmith@mail.com</a></td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-                <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
-                <!-- Font Awesome -->
-                <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" integrity="sha256-KzZiKy0DWYsnwMF+X1DvQngQ2/FxF7MF3Ff72XcpuPs=" crossorigin="anonymous"></script>
-                <!-- ChartJS -->
-                <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js" integrity="sha256-R4pqcOYV8lt7snxMQO/HSbVCFRPMdrhAFMH+vr9giYI=" crossorigin="anonymous"></script>
+<div class="dashboard">
+  <!-- General Section -->
+  <div class="dashboard-section">
+    <h2>General</h2>
+    <div>
+      <h3>Costos de pagos (Esta semana):</h3>
+      <p>${{ weekly_payment.sueldo__sum|default:"0.00" }}</p>
+    </div>
+    <div style="height: 400px; width: 600px;">      <h3>Asistencia por obra:</h3>
+      <canvas id="attendanceChart"></canvas>
+    </div>
+  </div>
 
-                <script>
-                    var chartOne = document.getElementById('chartOne');
-                    var myChart = new Chart(chartOne, {
-                        type: 'bar',
-                        data: {
-                            labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
-                            datasets: [{
-                                label: '# of Votes',
-                                data: [12, 19, 3, 5, 2, 3],
-                                backgroundColor: [
-                                    'rgba(255, 99, 132, 0.2)',
-                                    'rgba(54, 162, 235, 0.2)',
-                                    'rgba(255, 206, 86, 0.2)',
-                                    'rgba(75, 192, 192, 0.2)',
-                                    'rgba(153, 102, 255, 0.2)',
-                                    'rgba(255, 159, 64, 0.2)'
-                                ],
-                                borderColor: [
-                                    'rgba(255, 99, 132, 1)',
-                                    'rgba(54, 162, 235, 1)',
-                                    'rgba(255, 206, 86, 1)',
-                                    'rgba(75, 192, 192, 1)',
-                                    'rgba(153, 102, 255, 1)',
-                                    'rgba(255, 159, 64, 1)'
-                                ],
-                                borderWidth: 1
-                            }]
-                        },
-                        options: {
-                            scales: {
-                                yAxes: [{
-                                    ticks: {
-                                        beginAtZero: true
-                                    }
-                                }]
-                            }
-                        }
-                    });
-            
-                    var chartTwo = document.getElementById('chartTwo');
-                    var myLineChart = new Chart(chartTwo, {
-                        type: 'line',
-                        data: {
-                            labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
-                            datasets: [{
-                                label: '# of Votes',
-                                data: [12, 19, 3, 5, 2, 3],
-                                backgroundColor: [
-                                    'rgba(255, 99, 132, 0.2)',
-                                    'rgba(54, 162, 235, 0.2)',
-                                    'rgba(255, 206, 86, 0.2)',
-                                    'rgba(75, 192, 192, 0.2)',
-                                    'rgba(153, 102, 255, 0.2)',
-                                    'rgba(255, 159, 64, 0.2)'
-                                ],
-                                borderColor: [
-                                    'rgba(255, 99, 132, 1)',
-                                    'rgba(54, 162, 235, 1)',
-                                    'rgba(255, 206, 86, 1)',
-                                    'rgba(75, 192, 192, 1)',
-                                    'rgba(153, 102, 255, 1)',
-                                    'rgba(255, 159, 64, 1)'
-                                ],
-                                borderWidth: 1
-                            }]
-                        },
-                        options: {
-                            scales: {
-                                yAxes: [{
-                                    ticks: {
-                                        beginAtZero: true
-                                    }
-                                }]
-                            }
-                        }
-                    });
-                </script>
-{% endblock %}  
+  <!-- Administrator Views -->
+  <div class="dashboard-section">
+    <h2>Administrador</h2>
+    <div>
+      <h3>Proyectos Activos:</h3>
+      <p>{{ active_projects }}</p>
+    </div>
+    <div>
+      <h3>Empleados en Proyectos Activos:</h3>
+      <p>{{ active_employees }}</p>
+    </div>
+    <!-- Additional project progress visualization could go here -->
+  </div>
+  <select id="timePeriodSelector">
+    <option value="week">This Week</option>
+    <option value="month">This Month</option>
+    <!-- Add more options as needed -->
+  </select>
+  <!-- Individual Section -->
+  <div class="dashboard-section">
+    <h2>Individuales</h2>
+    <!-- Placeholder for individual project completion percentage -->
+    <!-- Table of employees working on the projects -->
+    <table>
+      <thead>
+        <tr>
+          <th>Nombre</th>
+          <th>Apellido</th>
+          <th>Puesto</th>
+          <th>Obra</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for employee in employees_table_data %}
+        <tr>
+          <td>{{ employee.nombre }}</td>
+          <td>{{ employee.apellido }}</td>
+          <td>{{ employee.puesto__nombre }}</td>
+          <td>{{ employee.obra__nombre }}</td>
+        </tr>
+        {% empty %}
+        <tr>
+          <td colspan="4">No hay empleados para mostrar.</td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
+</div>
+
+{% endblock %}
+{% block extra_js %}
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script>
+
+document.addEventListener('DOMContentLoaded', function () {
+    const selector = document.getElementById('timePeriodSelector');
+    if (selector) {
+        selector.addEventListener('change', function (event) {
+            fetchAndUpdateChart(event.target.value);
+        });
+        // Initialize the chart with the default view (current week)
+        fetchAndUpdateChart('week');
+    } else {
+        console.error('Element #timePeriodSelector not found.');
+    }
+});
+
+document.addEventListener('DOMContentLoaded', function () {
+    const attendanceChartCtx = document.getElementById('attendanceChart').getContext('2d');
+    let attendanceChart;
+
+    // Function to update the chart with new data
+    function updateAttendanceChart(data) {
+        if (attendanceChart) {
+            attendanceChart.destroy();
+        }
+
+        attendanceChart = new Chart(attendanceChartCtx, {
+            type: 'pie',
+            data: {
+                labels: data.map(item => item.week || item.month),
+                datasets: [{
+                    label: 'Asistencia',
+                    data: data.map(item => item.total), 
+                    backgroundColor: [
+                        'rgba(255, 99, 132, 0.2)', // red
+                        'rgba(54, 162, 235, 0.2)', // blue
+                        'rgba(255, 206, 86, 0.2)',  // yellow
+                        'rgba(75, 192, 192, 0.2)', // green
+                        'rgba(153, 102, 255, 0.2)', // purple
+                        'rgba(255, 159, 64, 0.2)'   // orange
+                    ],
+                    borderColor: [
+                        'rgba(255, 99, 132, 1)', // red
+                        'rgba(54, 162, 235, 1)', // blue
+                        'rgba(255, 206, 86, 1)',  // yellow
+                        'rgba(75, 192, 192, 1)', // green
+                        'rgba(153, 102, 255, 1)', // purple
+                        'rgba(255, 159, 64, 1)'   // orange
+                    ],
+                    borderWidth: 1
+                }]
+            },
+            options: {
+                responsive: true,
+                maintainAspectRatio: false,
+                legend: { position: 'bottom' },
+                title: { display: true, text: 'Asistencia por Obra' }
+            }
+        });
+    }
+
+   
+    // Function to fetch and update the chart based on the selected time period
+    function fetchAndUpdateChart(timeframe) {
+        fetch(`/dashboard-data?timeframe=${timeframe}`)
+            .then(response => response.json())
+            .then(data => updateAttendanceChart(data))
+            .catch(error => console.error('Error fetching attendance data:', error));
+    }
+
+    const selector = document.getElementById('timePeriodSelector');
+    if (selector) {
+        selector.addEventListener('change', function (event) {
+            fetchAndUpdateChart(event.target.value);
+        });
+
+        // Initialize the chart with the default view (current week)
+        fetchAndUpdateChart('week');
+    } else {
+        console.error('Element #timePeriodSelector not found.');
+    }
+});
+</script>
+{% endblock %}
