--- a/asistencias/asistencias_obras/templates/layouts/base_rh.html
+++ b/asistencias/asistencias_obras/templates/layouts/base_rh.html
@@ -10,77 +10,43 @@
     <!-- Tailwind -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
     
-    <style>
-        @import url('https://fonts.googleapis.com/css?family=Karla:400,700&display=swap');
-        .font-family-karla { font-family: karla; }
-        .bg-sidebar { background: #3d68ff; }
-        .cta-btn { color: #3d68ff; }
-        .upgrade-btn { background: #1947ee; }
-        .upgrade-btn:hover { background: #0038fd; }
-        .active-nav-link { background: #1947ee; }
-        .nav-item:hover { background: #1947ee; }
-        .account-link:hover { background: #3d68ff; }
-        .boton-accion {
-        display: inline-block;
-        padding: 8px 15px;
-        font-size: 14px;
-        cursor: pointer;
-        text-align: center;
-        text-decoration: none;
-        outline: none;
-        color: #fff;
-        background-color: #4CAF50;
-        border: none;
-        border-radius: 5px;
-        box-shadow: 0 9px #999;
-        margin: 2px;
-    }
+    <!-- Animate.css -->
+    <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
 
-    .boton-accion:hover {background-color: #3e8e41}
+    <!-- AOS (Animate On Scroll) -->
+    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-    .boton-accion:active {
-        background-color: #3e8e41;
-        box-shadow: 0 5px #666;
-        transform: translateY(4px);
-    }
+    <!-- Hover.css -->
+    <link href="https://cdn.jsdelivr.net/npm/hover.css/css/hover-min.css" rel="stylesheet">
 
-    .boton-editar {
-        background-color: #008CBA;
-    }
-
-    .boton-eliminar {
-        background-color: #f44336;
-    }
-
-    .boton-activar, .boton-desactivar {
-        background-color: #555555;
-    }
-    </style>
+    <link rel="stylesheet" href="{% static 'css/estilos_interfaz.css' %}">
+    <link rel="stylesheet" href="{% static 'css/estilos_interfaz.css' %}">
 
 </head>
 <body class="bg-gray-100 font-family-karla flex">
 
-    <aside class="relative bg-sidebar h-screen w-64 hidden sm:block shadow-xl">
+    <aside class="relative bg-sidebar h-screen w-64 hidden sm:block shadow-xl animate__animated animate__fadeInLeft">
         <div class="p-6">
             <a href="{% url 'crear_obra' %}" class="text-white text-3xl font-semibold uppercase hover:text-gray-300">RH</a>
-
         </div>
         <nav class="text-white text-base font-semibold pt-3">
-            <a href="{% url 'rh_dashboard' %}" class="flex items-center text-white py-4 pl-6 nav-item {% if path_name == 'rh_dashboard' %}active-nav-link{% endif %}">
+            <a href="{% url 'rh_dashboard' %}" class="flex items-center text-white py-4 pl-6 nav-item animate__animated animate__fadeInLeft">
                 <i class="fas fa-tachometer-alt mr-3"></i>
                 Dashboard
             </a>
-            <a href="{% url 'lista_empleados' %}" class="flex items-center text-white opacity-75 hover:opacity-100 py-4 pl-6 nav-item">
+            <a href="{% url 'lista_empleados' %}" class="flex items-center text-white py-4 pl-6 nav-item animate__animated animate__fadeInLeft">
                 <i class="fas fa-sticky-note mr-3"></i>
                 Empleados
             </a>
-            <a href="{% url 'reporte_asistencia' %}" class="flex items-center text-white opacity-75 hover:opacity-100 py-4 pl-6 nav-item">
+            <a href="{% url 'reporte_asistencia' %}" class="flex items-center text-white py-4 pl-6 nav-item animate__animated animate__fadeInLeft">
                 <i class="fas fa-table mr-3"></i>
                 Asistencia
             </a>
             <!-- Enlace de cierre de sesión -->
-            <a href="javascript:void(0);" id="logoutLink" data-url="{% url 'logout' %}" class="flex items-center text-white opacity-75 hover:opacity-100 py-4 pl-6 nav-item">
-                {% csrf_token %}
+            <a href="javascript:void(0);" id="logoutLink" data-url="{% url 'logout' %}" class="flex items-center text-white py-4 pl-6 nav-item animate__animated animate__fadeInLeft">
                 <i class="fas fa-sign-out-alt mr-3"></i>
                 Cerrar Sesión
             </a>
@@ -157,7 +123,11 @@
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
     <!-- Font Awesome -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" integrity="sha256-KzZiKy0DWYsnwMF+X1DvQngQ2/FxF7MF3Ff72XcpuPs=" crossorigin="anonymous"></script>
-
+    <!-- AOS Initialization -->
+    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
     <script>
         document.getElementById('logoutLink').addEventListener('click', function() {
             var form = document.createElement('form');
