--- a/asistencias/asistencias_obras/templates/rh/registro_empleados.html
+++ b/asistencias/asistencias_obras/templates/rh/registro_empleados.html
@@ -11,7 +11,7 @@
       <p class="text-x pb-6 flex items-center">
         <i class="fas fa-list mr-3"></i>Crear Empleado
       </p>
-      <form method="post" class="mb-0 space-y-6">
+      <form method="post" class="mb-0 space-y-6 " enctype="multipart/form-data">
         {% csrf_token %}
         {% for field in form %}
         <div>
