Arreglos en las variables de funcionalidad de summary

--- a/asistencias/asistencias_obras/templates/admin/admin_dashboard.html
+++ b/asistencias/asistencias_obras/templates/admin/admin_dashboard.html
@@ -466,7 +466,7 @@
               <div class="flex-none w-2/3 max-w-full px-3">
                 <div>
                   <p class="mb-0 font-sans text-sm font-semibold leading-normal uppercase dark:text-white dark:opacity-60">Total a Pagar</p>
-                  <h5 class="mb-2 font-bold dark:text-white">$ ${data.total_payment_for_today}</h5>
+                  <h5 class="mb-2 font-bold dark:text-white">$ ${data.total_payment_for_week}</h5>
                   <p class="mb-0 dark:text-white dark:opacity-60">
                     <span class="text-sm font-bold leading-normal text-red-600"></span>
                   </p>
@@ -489,7 +489,7 @@
               <div class="flex-none w-2/3 max-w-full px-3">
                 <div>
                   <p class="mb-0 font-sans text-sm font-semibold leading-normal uppercase dark:text-white dark:opacity-60">Empleado Activos</p>
-                  <h5 class="mb-2 font-bold dark:text-white">${data.jornadas_completas}</h5>
+                  <h5 class="mb-2 font-bold dark:text-white">${data.jornadas_completas_week}</h5>
                   <p class="mb-0 dark:text-white dark:opacity-60">
                     <span class="text-sm font-bold leading-normal text-emerald-500"></span>
                   </p>
