--- a/asistencias/asistencias_obras/templates/admin/admin_dashboard.html
+++ b/asistencias/asistencias_obras/templates/admin/admin_dashboard.html
@@ -89,7 +89,63 @@
   </div>
 </div>
 
+</div>
+
+
+<div class="p-4 rounded-lg">
+  <p class="text-xl pb-3 flex items-center">
+    <i class="fas fa-check mr-3"></i> Tablas de pagos
+</p>
 <div class="w-full mt-12 bg-white rounded-lg">
+
+<div class="p-4 bg-white shadow-md rounded-lg">  
+
+ 
+  <div class="btn-group" role="group" aria-label="Basic example">
+    <button type="button" class="btn btn-outline-dark" id="cargarSemanal">Cargar Pagos Semanales</button>
+    <button type="button" class="btn btn-outline-dark" id="cargarMensual">Cargar Pagos Mensuales</button>
+  </div>
+  <table id="tablaPagosEmpleados" class="table table-striped">
+    <thead class="bg-gray-800 text-white">
+        <tr>
+          <th class="w-1/3 text-left py-3 px-4 uppercase font-semibold text-sm">Empleado</th>
+          <th class="w-1/3 text-left py-3 px-4 uppercase font-semibold text-sm">Obra</th>
+          <th class="w-1/3 text-left py-3 px-4 uppercase font-semibold text-sm">Dias laborados</th>
+          <th class="w-1/3 text-left py-3 px-4 uppercase font-semibold text-sm">Pago</th>
+        </tr>
+    </thead>
+    <tbody>
+        <!--Datos obtenidos con AJAX-->
+    </tbody>
+ </table>
+
+<hr class="my-4">
+<table id="tablaPagosObra" class="table table-striped">
+  <thead class="bg-gray-800 text-white">
+      <tr>
+        <th class="w-1/3 text-left py-3 px-4 uppercase font-semibold text-sm">Obra</th>
+        <th class="w-1/3 text-left py-3 px-4 uppercase font-semibold text-sm">Pago</th>
+      </tr>
+  </thead>
+  <tbody>
+      <!--Datos obtenidos con AJAX-->
+  </tbody>
+</table>
+
+</div>
+
+
+</div>
+
+
+
+
+<div class="p-4 rounded-lg">
+    <p class="text-xl pb-3 flex items-center">
+      <i class="fas fa-check mr-3"></i> Obras con Empleados
+  </p>
+<div class="w-full mt-12 bg-white rounded-lg">
+
   <div class="p-4 bg-white shadow-md rounded-lg">                   
 
   <table id="tablaObras" class="table table-striped">
@@ -104,6 +160,7 @@
      </tbody>
   </table>
   </div>    
+</div>
 </div>
 
 <div class="flex flex-wrap mt-6">
@@ -133,13 +190,74 @@
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 <script>
+
+
+$(document).ready(function() {
+    // Función para cargar los datos
+    function cargarDatos(timeRange) {
+        $.ajax({
+            url: '/ajax/tabla_pagos/', // Url del endpoint
+            data: {
+                'time_range': timeRange
+            },
+            dataType: 'json',
+            success: function(response) {
+                console.log(response);
+                var data = response.data;
+                var tabla = $("#tablaPagosEmpleados tbody");
+
+                $.each(data, function(i, item) {
+                    var fila = '<tr>' +
+                        '<td>' + item.empleado__nombre + '</td>' +
+                        '<td>' + item.empleado__obra__nombre + '</td>' +
+                        '<td>' + item.days_worked + '</td>' +
+                        '<td>' + item.total_payment + '</td>' +
+                        '</tr>';
+                    tabla.append(fila);
+                });
+
+                var pagos = response.pago_obra;
+                var tabla = $("#tablaPagosObra tbody");
+
+                $.each(pagos, function(i, item) {
+                    var fila = '<tr>' +
+                        '<td>' + item.obra + '</td>' +
+                        '<td>' + item.total_pago + '</td>' +
+                        '</tr>';
+                    tabla.append(fila);
+                });
+
+            },
+            error: function() {
+                alert("Error al cargar los datos.");
+            }
+
+        });
+    }
+
+    // Evento de clic para cargar pagos semanales
+    $('#cargarSemanal').click(function() {
+        $('#tablaPagosEmpleados tbody').empty();
+        $('#tablaPagosObra tbody').empty();
+        cargarDatos('weekly');
+    });
+
+    // Evento de clic para cargar pagos mensuales
+    $('#cargarMensual').click(function() {
+        $('#tablaPagosEmpleados tbody').empty();
+        $('#tablaPagosObra tbody').empty();
+        cargarDatos('monthly');
+    });
+    $('#cargarSemanal').click();
+});
+
+
   $(document).ready(function () {
     $.ajax({
       url: "/ajax/progreso_obras_indivual/", // URL del endpoint
       method: "GET",
       dataType: "json",
       success: function (response) {
-        console.log(response);
         var contenedor = $("#chart-container");
         contenedor.empty(); // Limpiar el contenedor para nuevas gráficas
 
@@ -488,7 +606,7 @@
             <div class="flex flex-row -mx-3">
               <div class="flex-none w-2/3 max-w-full px-3">
                 <div>
-                  <p class="mb-0 font-sans text-sm font-semibold leading-normal uppercase dark:text-white dark:opacity-60">Empleado Activos</p>
+                  <p class="mb-0 font-sans text-sm font-semibold leading-normal uppercase dark:text-white dark:opacity-60">Empleados Activos</p>
                   <h5 class="mb-2 font-bold dark:text-white">${data.jornadas_completas_week}</h5>
                   <p class="mb-0 dark:text-white dark:opacity-60">
                     <span class="text-sm font-bold leading-normal text-emerald-500"></span>
