--- a/asistencias/asistencias_obras/templates/admin/admin_dashboard.html
+++ b/asistencias/asistencias_obras/templates/admin/admin_dashboard.html
@@ -102,8 +102,8 @@
 
  
   <div class="btn-group" role="group" aria-label="Basic example">
-    <button type="button" class="btn btn-outline-dark" id="cargarSemanal">Cargar Pagos Semanales</button>
-    <button type="button" class="btn btn-outline-dark" id="cargarMensual">Cargar Pagos Mensuales</button>
+    <button type="button" class="btn btn-outline-dark" id="cargarSemanal">Pagos Semanales</button>
+    <button type="button" class="btn btn-outline-dark" id="cargarMensual">Pagos Mensuales</button>
   </div>
   <table id="tablaPagosEmpleados" class="table table-striped">
     <thead class="bg-gray-800 text-white">
@@ -119,7 +119,7 @@
     </tbody>
  </table>
 
-<hr class="my-4">
+<hr class=" border-3 my-4">
 <table id="tablaPagosObra" class="table table-striped">
   <thead class="bg-gray-800 text-white">
       <tr>
