--- a/asistencias/asistencias_obras/templates/rh/rh_dashboard.html
+++ b/asistencias/asistencias_obras/templates/rh/rh_dashboard.html
@@ -1,174 +1,160 @@
 {% extends "layouts/base_rh.html" %}
 {% block content %}
+<head>
+    <!-- Bootstrap CSS -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css">
+<!-- DataTables Bootstrap 5 CSS -->
+<link rel="stylesheet" href="https://cdn.datatables.net/2.0.3/css/dataTables.bootstrap5.css">
+
+</head>
 <h1 class="text-3xl text-black pb-6">Dashboard</h1>
-    
-                <div class="flex flex-wrap mt-6">
-                    <div class="w-full lg:w-1/2 pr-0 lg:pr-2">
-                        <p class="text-xl pb-3 flex items-center">
-                            <i class="fas fa-plus mr-3"></i> Monthly Reports
-                        </p>
-                        <div class="p-6 bg-white">
-                            <canvas id="chartOne" width="400" height="200"></canvas>
-                        </div>
-                    </div>
-                    <div class="w-full lg:w-1/2 pl-0 lg:pl-2 mt-12 lg:mt-0">
-                        <p class="text-xl pb-3 flex items-center">
-                            <i class="fas fa-check mr-3"></i> Resolved Reports
-                        </p>
-                        <div class="p-6 bg-white">
-                            <canvas id="chartTwo" width="400" height="200"></canvas>
-                        </div>
-                    </div>
-                </div>
-    
-                <div class="w-full mt-12">
-                    <p class="text-xl pb-3 flex items-center">
-                        <i class="fas fa-list mr-3"></i> Latest Reports
-                    </p>
-                    <div class="bg-white overflow-auto">
-                        <table class="min-w-full bg-white">
-                            <thead class="bg-gray-800 text-white">
-                                <tr>
-                                    <th class="w-1/3 text-left py-3 px-4 uppercase font-semibold text-sm">Name</th>
-                                    <th class="w-1/3 text-left py-3 px-4 uppercase font-semibold text-sm">Last name</th>
-                                    <th class="text-left py-3 px-4 uppercase font-semibold text-sm">Phone</th>
-                                    <th class="text-left py-3 px-4 uppercase font-semibold text-sm">Email</th>
-                                </tr>
-                            </thead>
-                            <tbody class="text-gray-700">
-                                <tr>
-                                    <td class="w-1/3 text-left py-3 px-4">Lian</td>
-                                    <td class="w-1/3 text-left py-3 px-4">Smith</td>
-                                    <td class="text-left py-3 px-4"><a class="hover:text-blue-500" href="tel:622322662">622322662</a></td>
-                                    <td class="text-left py-3 px-4"><a class="hover:text-blue-500" href="mailto:jonsmith@mail.com">jonsmith@mail.com</a></td>
-                                </tr>
-                                <tr class="bg-gray-200">
-                                    <td class="w-1/3 text-left py-3 px-4">Emma</td>
-                                    <td class="w-1/3 text-left py-3 px-4">Johnson</td>
-                                    <td class="text-left py-3 px-4"><a class="hover:text-blue-500" href="tel:622322662">622322662</a></td>
-                                    <td class="text-left py-3 px-4"><a class="hover:text-blue-500" href="mailto:jonsmith@mail.com">jonsmith@mail.com</a></td>
-                                </tr>
-                                <tr>
-                                    <td class="w-1/3 text-left py-3 px-4">Oliver</td>
-                                    <td class="w-1/3 text-left py-3 px-4">Williams</td>
-                                    <td class="text-left py-3 px-4"><a class="hover:text-blue-500" href="tel:622322662">622322662</a></td>
-                                    <td class="text-left py-3 px-4"><a class="hover:text-blue-500" href="mailto:jonsmith@mail.com">jonsmith@mail.com</a></td>
-                                </tr>
-                                <tr class="bg-gray-200">
-                                    <td class="w-1/3 text-left py-3 px-4">Isabella</td>
-                                    <td class="w-1/3 text-left py-3 px-4">Brown</td>
-                                    <td class="text-left py-3 px-4"><a class="hover:text-blue-500" href="tel:622322662">622322662</a></td>
-                                    <td class="text-left py-3 px-4"><a class="hover:text-blue-500" href="mailto:jonsmith@mail.com">jonsmith@mail.com</a></td>
-                                </tr>
-                                <tr>
-                                    <td class="w-1/3 text-left py-3 px-4">Lian</td>
-                                    <td class="w-1/3 text-left py-3 px-4">Smith</td>
-                                    <td class="text-left py-3 px-4"><a class="hover:text-blue-500" href="tel:622322662">622322662</a></td>
-                                    <td class="text-left py-3 px-4"><a class="hover:text-blue-500" href="mailto:jonsmith@mail.com">jonsmith@mail.com</a></td>
-                                </tr>
-                                <tr class="bg-gray-200">
-                                    <td class="w-1/3 text-left py-3 px-4">Emma</td>
-                                    <td class="w-1/3 text-left py-3 px-4">Johnson</td>
-                                    <td class="text-left py-3 px-4"><a class="hover:text-blue-500" href="tel:622322662">622322662</a></td>
-                                    <td class="text-left py-3 px-4"><a class="hover:text-blue-500" href="mailto:jonsmith@mail.com">jonsmith@mail.com</a></td>
-                                </tr>
-                                <tr>
-                                    <td class="w-1/3 text-left py-3 px-4">Oliver</td>
-                                    <td class="w-1/3 text-left py-3 px-4">Williams</td>
-                                    <td class="text-left py-3 px-4"><a class="hover:text-blue-500" href="tel:622322662">622322662</a></td>
-                                    <td class="text-left py-3 px-4"><a class="hover:text-blue-500" href="mailto:jonsmith@mail.com">jonsmith@mail.com</a></td>
-                                </tr>
-                                <tr class="bg-gray-200">
-                                    <td class="w-1/3 text-left py-3 px-4">Isabella</td>
-                                    <td class="w-1/3 text-left py-3 px-4">Brown</td>
-                                    <td class="text-left py-3 px-4"><a class="hover:text-blue-500" href="tel:622322662">622322662</a></td>
-                                    <td class="text-left py-3 px-4"><a class="hover:text-blue-500" href="mailto:jonsmith@mail.com">jonsmith@mail.com</a></td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-                <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
+
+<div class="p-4 rounded-lg" >
+    <div class="p-4 bg-white shadow-md rounded-lg">
+        <p class="text-xl pb-3 flex items-center">
+            <i class="fas fa-plus mr-3"></i> Progreso de obra
+        </p>
+        <div class="w-full flex justify-center">
+            <canvas id="progreso_obra" class="w-full"></canvas>
+        <div class="w-full flex justify-center">
+
+        </div>
+    </div>
+</div>
+
+<div class="p-4 rounded-lg">
+    <p class="text-xl pb-3 flex items-center">
+      <i class="fas fa-check mr-3"></i> Empleados de la obra
+  </p>
+<div class="w-full mt-12 bg-white rounded-lg">
+
+  <div class="p-4 bg-white shadow-md rounded-lg">                   
+
+  <table id="empleados" class="table table-striped">
+     <thead class="bg-gray-800 text-white">
+         <tr>
+             <th class="w-1/3 text-left py-3 px-4 uppercase font-semibold text-sm">Nombre</th>
+             <th class="w-1/3 text-left py-3 px-4 uppercase font-semibold text-sm">Apellido</th>
+             
+             <th class="w-1/3 text-left py-3 px-4 uppercase font-semibold text-sm">Puesto</th>
+             <th class="w-1/3 text-left py-3 px-4 uppercase font-semibold text-sm">Sueldo</th>
+         </tr>
+     </thead>
+     <tbody>
+         <!--Datos obtenidos con AJAX-->
+     </tbody>
+  </table>
+  </div>    
+</div>
+</div>
+    <!-- jQuery -->
+<script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+<!-- Bootstrap Bundle JS (incluye Popper) -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+<!-- DataTables JS -->
+<script src="https://cdn.datatables.net/2.0.3/js/dataTables.js"></script>
+<!-- DataTables Bootstrap 5 JS -->
+<script src="https://cdn.datatables.net/2.0.3/js/dataTables.bootstrap5.js"></script>
+
+                
+<script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js"defer ></script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
+<script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
                 <!-- Font Awesome -->
                 <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" integrity="sha256-KzZiKy0DWYsnwMF+X1DvQngQ2/FxF7MF3Ff72XcpuPs=" crossorigin="anonymous"></script>
                 <!-- ChartJS -->
                 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js" integrity="sha256-R4pqcOYV8lt7snxMQO/HSbVCFRPMdrhAFMH+vr9giYI=" crossorigin="anonymous"></script>
 
-                <script>
-                    var chartOne = document.getElementById('chartOne');
-                    var myChart = new Chart(chartOne, {
-                        type: 'bar',
-                        data: {
-                            labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
-                            datasets: [{
-                                label: '# of Votes',
-                                data: [12, 19, 3, 5, 2, 3],
-                                backgroundColor: [
-                                    'rgba(255, 99, 132, 0.2)',
-                                    'rgba(54, 162, 235, 0.2)',
-                                    'rgba(255, 206, 86, 0.2)',
-                                    'rgba(75, 192, 192, 0.2)',
-                                    'rgba(153, 102, 255, 0.2)',
-                                    'rgba(255, 159, 64, 0.2)'
-                                ],
-                                borderColor: [
-                                    'rgba(255, 99, 132, 1)',
-                                    'rgba(54, 162, 235, 1)',
-                                    'rgba(255, 206, 86, 1)',
-                                    'rgba(75, 192, 192, 1)',
-                                    'rgba(153, 102, 255, 1)',
-                                    'rgba(255, 159, 64, 1)'
-                                ],
-                                borderWidth: 1
-                            }]
-                        },
-                        options: {
-                            scales: {
-                                yAxes: [{
-                                    ticks: {
-                                        beginAtZero: true
-                                    }
-                                }]
-                            }
-                        }
-                    });
+                   <script>
+                    new DataTable('#empleados');
+
+$(document).ready(function() {
+    // Función para cargar los datos
+    $.ajax({
+        url: '/ajax/empleados_rh/', // Url del endpoint
+        dataType: 'json',
+        success: function(response) {
+            var data = response.data; // Asegúrate de que el backend responde con un objeto que tiene una propiedad "data" que es un arreglo.
+            var tabla = $("#empleados tbody");
+            console.log(data);
             
-                    var chartTwo = document.getElementById('chartTwo');
-                    var myLineChart = new Chart(chartTwo, {
-                        type: 'line',
-                        data: {
-                            labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
-                            datasets: [{
-                                label: '# of Votes',
-                                data: [12, 19, 3, 5, 2, 3],
-                                backgroundColor: [
-                                    'rgba(255, 99, 132, 0.2)',
-                                    'rgba(54, 162, 235, 0.2)',
-                                    'rgba(255, 206, 86, 0.2)',
-                                    'rgba(75, 192, 192, 0.2)',
-                                    'rgba(153, 102, 255, 0.2)',
-                                    'rgba(255, 159, 64, 0.2)'
-                                ],
-                                borderColor: [
-                                    'rgba(255, 99, 132, 1)',
-                                    'rgba(54, 162, 235, 1)',
-                                    'rgba(255, 206, 86, 1)',
-                                    'rgba(75, 192, 192, 1)',
-                                    'rgba(153, 102, 255, 1)',
-                                    'rgba(255, 159, 64, 1)'
-                                ],
-                                borderWidth: 1
-                            }]
-                        },
-                        options: {
-                            scales: {
-                                yAxes: [{
-                                    ticks: {
-                                        beginAtZero: true
-                                    }
-                                }]
-                            }
+            tabla.empty(); // Limpia el cuerpo de la tabla antes de añadir nuevas filas
+
+            $.each(data, function(i, item) { 
+                var fila = $('<tr>').append(
+                    $('<td>').text(item.nombre),
+                    $('<td>').text(item.apellido),
+                    $('<td>').text(item.puesto),
+                    $('<td>').text(item.sueldo)
+                );
+                tabla.append(fila);
+            });
+        },
+        error: function() {
+            alert("Error al cargar los datos.");
+        }
+    });
+});
+
+
+$(document).ready(function() {
+    $.ajax({
+        url: '/ajax/progreso_obra/',
+        type: 'GET',
+        success: function(response) {
+            var data = response.data[0]; // Asumiendo que la respuesta es un array y estamos interesados en el primer objeto
+            var nombre = data.obra_nombre;
+            var ctx = document.getElementById('progreso_obra').getContext('2d');
+            var miGraficoDoughnut = new Chart(ctx, {
+                type: 'doughnut',
+                data: {
+                    labels: [' Completado', 'Restante'],
+                    datasets: [{
+                        label: 'Progreso de la obra',
+                        data: [data.porcentaje, 100 - data.porcentaje], // Asumiendo que "data.restante" no es necesario y calculamos el restante directamente
+                        backgroundColor: [
+                            'rgba(75, 192, 192, 0.2)', // Verde para completado
+                            'rgba(255, 99, 132, 0.2)'  // Rojo para lo que resta
+                        ],
+                        borderColor: [
+                            'rgba(75, 192, 192, 1)',
+                            'rgba(255, 99, 132, 1)'
+                        ],
+                        borderWidth: 1
+                    }]
+                },
+                options: {
+                    responsive: true,
+                    legend: {
+                        position: 'top',
+                    },
+                    title: {
+                        display: true,
+                        text: 'Progreso de la Obra: ' + nombre
+                    },
+                    animation: {
+                        animateScale: true,
+                        animateRotate: true,
+                        onComplete: function() {
+                            var ctx = this.chart.ctx;
+                            ctx.font = '16px Arial';
+                            ctx.textAlign = 'center';
+                            ctx.textBaseline = 'middle';
+                            var centerX = (this.chart.chartArea.left + this.chart.chartArea.right) / 2;
+                            var centerY = (this.chart.chartArea.top + this.chart.chartArea.bottom) / 2;
+                            ctx.fillText(data.porcentaje.toFixed(2) + '%', centerX, centerY);
                         }
-                    });
-                </script>
+                    }
+                }
+            });
+        }
+    });
+});
+
+</script>           
+                
+                
+                
+               
 {% endblock %}  
