Fix date range calculation in monthly time range

--- a/asistencias/asistencias_obras/templates/admin/admin_dashboard.html
+++ b/asistencias/asistencias_obras/templates/admin/admin_dashboard.html
@@ -430,6 +430,7 @@ $(document).ready(function() {
         var conjunto = $('#conjuntoDropdown').val(); // Obtiene el conjunto seleccionado
         cargarDatos('custom', conjunto); // Carga datos para el conjunto seleccionado. Asegúrate que tu backend maneje 'custom'
     });
+    $('#asistenciaSemanal').click();
 
     function cargarDatos(timeRange, conjunto) {
         $.ajax({
