Update dropdown options for number of weeks to avoid error

--- a/asistencias/asistencias_obras/templates/admin/admin_dashboard.html
+++ b/asistencias/asistencias_obras/templates/admin/admin_dashboard.html
@@ -93,7 +93,7 @@
         <button  type="button" class="btn btn-outline-dark" id="asistenciaConjunto">Cargar Datos</button>
     
         <select class="form-select" id="semanasAsistencia" aria-label=".form-select-sm example">
-            <option selected>Número de Semanas</option>
+            <option value="2" selected>Número de Semanas</option>
             <option value="3">2 Semana</option>
             <option value="4">3 Semanas</option>
         </select>
@@ -127,7 +127,7 @@
     <button  type="button" class="btn btn-outline-dark" id="cargarConjunto">Cargar Datos</button>
 
     <select class="form-select form-select-sm" id="semanasDropdown" aria-label=".form-select-sm example">
-        <option selected>Número de Semanas</option>
+        <option value="2" selected>Número de Semanas</option>
         <option value="3">2 Semana</option>
         <option value="4">3 Semanas</option>
     </select>
